Tue Sep 20 09:35:28 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/Plan_Launcher/Plan_Launcher.mpc

	Added a missing library.

Mon Sep 19 16:29:57 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* ADD_Handler.cpp
	* Common.h
	* IDD_Handler.cpp
	* IDD_Handler.h
	* IDREF_Base.cpp
	* IDREF_Base.h
	* IRDD_Handler.cpp
	* IRDD_Handler.h
	* MDD_Handler.cpp
	* PSPE_Handler.cpp
	* STD_CID_Handler.cpp
	* XML_Error_Handler.cpp

	Added some improved error handling/reporting. Much more to come.
	
	* test.cpp
	* RT-CCM/RT-CCM-Handlers.mpc
	* RT-CCM/SRD_Handler.cpp
	* RT-CCM/SRD_Handler.h
	* Config_Handlers.mpc
	* DP_Handler.cpp

	Added hooks for parsing ServerResources document into a deployment
	plan.

	This is activated by adding an InfoProperty with name
	"CIAOServerResources" with a value of a valid CSR file. 

	Also enabled parsing of deployRequirements and infoProperties.

Mon Sep 19 10:55:05 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* RACE/Input_Adapters/Base/Input_Adapter.mpc
	* RACE/Input_Adapters/Interactive_Input_Adapter/Interactive_Input_Adapter.mpc
	* RACE/Output_Adapters/Base/Output_Adapter.mpc
	* RACE/Output_Adapters/Interface/Output_Adapter_Interface.mpc
	* RACE/Output_Adapters/XML_Output_Adapter/XML_Output_Adapter.mpc
	* RACE/Plan_Analyzer/Component/Plan_Analyzer.mpc
	* RACE/Plan_Analyzer/Interface/Plan_Analyzer_Interface.mpc
	* RACE/Planner_Manager/Component/Planner_Manager.mpc
	* RACE/Planner_Manager/Interface/Planner_Manager_Interface.mpc
	* RACE/Planners/Base/Planner.mpc
	* RACE/Planners/Interface/Planner_Interface.mpc
	* RACE/Planners/SimpleBinPacker/SimpleBinPacker.mpc
	* RACE/common/RACE_common.mpc
	* tools/Config_Handlers/RT-CCM/CLA_Handler.h
	* tools/Config_Handlers/RT-CCM/OC_Handler.cpp
	* tools/Config_Handlers/RT-CCM/OR_Handler.cpp
	* tools/Config_Handlers/RT-CCM/OR_Handler.h

	Misc fuzz fixes. 
	
Fri Sep 16 09:54:44 2005  William Otte  <wotte@william-ottes-powerbook-g4-15.local>
